--- a/EN_main.html
+++ b/EN_main.html
@@ -185,7 +185,7 @@
                     <div class="teacher_EN">
             <div class="teacher_card_EN">
                 <div class="img_EN">
-                    <img src="img/MR HANY MAGDY.jpeg" alt="teacher">
+                    <img src="img/mr hany magdy.jpeg" alt="teacher">
                     <h3>MR HANY MAGDY</h3>
                 </div>
             </div>
